<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    tools:context=".MainActivity14">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/s1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/yellow"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/s2"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:background="@color/yellow"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/s3"
        android:layout_centerVertical="true"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@color/yellow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvs4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/s4"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:background="@color/yellow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvs5"
        android:layout_width="100dp"
        android:text="@string/s5"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@color/yellow" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvs6"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/s6"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/yellow" />


</RelativeLayout>