<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    tools:context=".Constraint_Layout_Activity15">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view1"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@color/yellow"
        android:text="@string/p1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/view2"
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:background="@color/yellow"
       android:text="@string/p2"
       android:textSize="25sp"
       android:textStyle="bold"
       android:gravity="center"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/p3"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/p4"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view5"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/p5"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view4"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view6"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/p6"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view4"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view7"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/p7"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view8"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/p8"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view9"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/p9"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>