<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/border"
    tools:context=".Linaer_Layout_2">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/line">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="440dp"
            android:layout_height="150dp"
            android:background="@drawable/line2"
            android:text="@string/textview"
            android:layout_margin="11dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"/>


       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="440dp"
           android:layout_height="100dp"
           android:orientation="horizontal"
           android:background="@drawable/line2"
           android:layout_gravity="center"
           android:weightSum="2"
           android:layout_marginBottom="170dp">

           <View
               android:layout_width="80dp"
               android:layout_height="76dp"
               android:layout_weight="1"
               android:textSize="20sp"
               android:background="@drawable/line"
               android:layout_margin="10dp" />

           <Button
               android:id="@+id/btn0"
               android:layout_width="0dp"
               android:layout_height="76dp"
               android:layout_weight="1"
               android:layout_margin="10dp"
               android:background="@drawable/line"
               android:text="@string/button"
               android:textSize="20sp" />

       </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="440dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginBottom="55dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="440dp"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@drawable/line2">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn"
                android:textSize="20sp"
                android:background="@drawable/line"
                android:layout_marginHorizontal="2dp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn1"
                android:textSize="20sp"
                android:background="@drawable/line"
                android:layout_marginHorizontal="2dp"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn2"
                android:textSize="20sp"
                android:background="@drawable/line"
                android:layout_marginHorizontal="2dp"/>

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn3"
                android:textSize="20sp"
                android:background="@drawable/line"
                android:layout_marginHorizontal="2dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="440dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="260dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="440dp"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@drawable/line2">

                <Button
                    android:id="@+id/btn5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn4"
                    android:textSize="20sp"
                    android:background="@drawable/line"
                    android:layout_marginHorizontal="2dp" />

                <Button
                    android:id="@+id/btn6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn5"
                    android:textSize="20sp"
                    android:background="@drawable/line"
                    android:layout_marginHorizontal="2dp"/>

                <Button
                    android:id="@+id/btn7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn7"
                    android:textSize="20sp"
                    android:background="@drawable/line"
                    android:layout_marginHorizontal="2dp"/>

                <Button
                    android:id="@+id/btn8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn6"
                    android:textSize="20sp"
                    android:background="@drawable/line"
                    android:layout_marginHorizontal="2dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="440dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="135dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="440dp"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@drawable/line2">

                <Button
                    android:id="@+id/btn9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn8"
                    android:textSize="20sp"
                    android:background="@drawable/line"
                    android:layout_marginHorizontal="2dp" />

                <Button
                    android:id="@+id/btn10"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn11"
                    android:textSize="20sp"
                    android:background="@drawable/line"
                    android:layout_marginHorizontal="2dp"/>

                <Button
                    android:id="@+id/btn11"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn12"
                    android:textSize="20sp"
                    android:background="@drawable/line"
                    android:layout_marginHorizontal="2dp"/>

                <Button
                    android:id="@+id/btn12"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn13"
                    android:textSize="20sp"
                    android:background="@drawable/line"
                    android:layout_marginHorizontal="2dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="440dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="440dp"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@drawable/line2">

                <Button
                    android:id="@+id/btn13"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="BTN"
                    android:textSize="20sp"
                    android:background="@drawable/line"
                    android:layout_marginHorizontal="2dp" />

                <Button
                    android:id="@+id/btn14"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="BTN"
                    android:textSize="20sp"
                    android:background="@drawable/line"
                    android:layout_marginHorizontal="2dp"/>

                <Button
                    android:id="@+id/btn15"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="BTN"
                    android:textSize="20sp"
                    android:background="@drawable/line"
                    android:layout_marginHorizontal="2dp"/>

                <Button
                    android:id="@+id/btn16"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="BTN"
                    android:textSize="20sp"
                    android:background="@drawable/line"
                    android:layout_marginHorizontal="2dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>














    </FrameLayout>



</LinearLayout>